Updated page Basic Sketcher Tutorial/it

--- a/wiki/it/Basic_Sketcher_Tutorial.html
+++ b/wiki/it/Basic_Sketcher_Tutorial.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Basic Sketcher Tutorial/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Basic+Sketcher+Tutorial&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Grundlegendes Tutorial zum Sketcher (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Grundlegendes Tutorial zum Sketcher (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Basic_Sketcher_Tutorial.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Basic Sketcher Tutorial (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Tutorial B&aacute;sico Croquizador (70% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Tutoriel d'introduction (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Poradnik: Podstawy dla &#347;rodowiska pracy Szkicownik (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
+<li><a href="../pl/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Poradnik: Podstawy dla &#347;rodowiska pracy Szkicownik (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial do esbo&ccedil;o (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial B&aacute;sico de Sketcher (1% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial Sketcher (3% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -180,12 +180,8 @@
 <dl><dd>7.6. Selezionare la linea di costruzione pi&ugrave; vicina all'asse verticale.</dd>
 <dd>7.7. Premere <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Constraint_Vertical.svg&amp;filetimestamp=20231231200018&amp;.html" class="mw-file-description"><img src="../File/Constraint_Vertical.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical/it">Verticale</a></span> (facoltativo). Se si &egrave; disegnata la linea di costruzione verso il basso lungo l'asse Y, &egrave; gi&agrave; stato inserito un <span typeof="mw:File"><a href="../index.php?title=Constraint_PointOnObject.svg&amp;filetimestamp=20231231195734&amp;.html" class="mw-file-description"><img src="../File/Constraint_PointOnObject.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject/it">vincolo Punto su oggetto</a> automatico, mantenendo la linea di costruzione verticale. In questo caso, non &egrave; necessario alcun <span typeof="mw:File"><a href="../index.php?title=Constraint_Vertical.svg&amp;filetimestamp=20231231200018&amp;.html" class="mw-file-description"><img src="../File/Constraint_Vertical.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical/it">vincolo Verticale</a> aggiuntivo.</dd></dl>
 <p><i>Nota:</i> quando si aggiungono i vincoli, i simboli sovrapposti che indicano il tipo di vincolo appaiono sulla geometria nella <a href="../it/3D_view.html" class="mw-redirect" title="3D view/it">vista 3D</a>. Se questi simboli offuscano la vista, li si possono nascondere deselezionando il vincolo nel <a href="../it/Task_panel.html" class="mw-redirect" title="Task panel/it">pannello attivit&agrave;</a>. Notare inoltre che il numero di gradi di libert&agrave; diminuisce dopo l'aggiunta di ciascun vincolo.
-</p>
-<div class="mw-translate-fuzzy">
-<p><i>Nota 2:</i> se si desidera disattivare temporaneamente il vincolo, lo si pu&ograve; selezionare e premere <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleActiveConstraint.svg&amp;filetimestamp=20231231200133&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleActiveConstraint.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Sketcher_ToggleActiveConstraint.html" title="Sketcher ToggleActiveConstraint/it">Attiva/disattiva vincolo attivo</a></span>. Quando si desidera applicarlo di nuovo, premere di nuovo lo stesso pulsante.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05a_Sk01_Sketcher_equality_constraints_lines.png&amp;filetimestamp=20200223072040&amp;.html" class="mw-file-description"><img src="../File/05a_Sk01_Sketcher_equality_constraints_lines.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span> <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05b_Sk01_Sketcher_equality_constraints_O-arcs.png&amp;filetimestamp=20200223072123&amp;.html" class="mw-file-description"><img src="../File/05b_Sk01_Sketcher_equality_constraints_O-arcs.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span>
+</p><p><i>Nota 2:</i> se si desidera disattivare temporaneamente il vincolo, lo si pu&ograve; selezionare e premere <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleActiveConstraint.svg&amp;filetimestamp=20231231200133&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleActiveConstraint.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Sketcher_ToggleActiveConstraint.html" title="Sketcher ToggleActiveConstraint/it">Attiva/disattiva vincolo attivo</a></span>. Quando si vuole riattivarlo, premere di nuovo lo stesso pulsante.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05a_Sk01_Sketcher_equality_constraints_lines.png&amp;filetimestamp=20200223072040&amp;.html" class="mw-file-description"><img src="../File/05a_Sk01_Sketcher_equality_constraints_lines.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span> <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05b_Sk01_Sketcher_equality_constraints_O-arcs.png&amp;filetimestamp=20200223072123&amp;.html" class="mw-file-description"><img src="../File/05b_Sk01_Sketcher_equality_constraints_O-arcs.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span>
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05c_Sk01_Sketcher_equality_constraints_I-arcs.png&amp;filetimestamp=20200223072159&amp;.html" class="mw-file-description"><img src="../File/05c_Sk01_Sketcher_equality_constraints_I-arcs.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Schizzo con vincoli di uguaglianza applicati alle linee di costruzione e ai due insiemi di archi.</p>
@@ -301,35 +297,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210934
+Cached time: 20260112110138
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.202 seconds
-Real time usage: 0.735 seconds
-Preprocessor visited node count: 906/1000000
+CPU time usage: 0.153 seconds
+Real time usage: 0.245 seconds
+Preprocessor visited node count: 905/1000000
 Post&#8208;expand include size: 42664/2097152 bytes
 Template argument size: 11678/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2569/5000000 bytes
+Unstrip post&#8208;expand size: 2583/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  179.595      1 -total
- 23.01%   41.320      1 Template:TutorialInfo/it
- 19.24%   34.557      1 Template:Sketcher_Tools_navi/it
- 14.49%   26.019      1 Template:Userdocnavi/it
- 11.81%   21.207      2 Template:Navigation_menu_2
- 10.81%   19.423     26 Template:Button
-  8.91%   16.003     15 Template:Emphasis
-  4.94%    8.864     11 Template:Caption
-  4.71%    8.453      9 Template:Value
-  3.12%    5.610      9 Template:MenuCommand
+100.00%   38.631      1 -total
+ 26.48%   10.230      1 Template:Sketcher_Tools_navi/it
+ 15.64%    6.041      2 Template:Navigation_menu_2
+ 14.55%    5.619      1 Template:Userdocnavi/it
+ 13.41%    5.179      9 Template:Value
+  7.93%    3.062     11 Template:Caption
+  7.32%    2.829      1 Template:TutorialInfo/it
+  6.83%    2.640      9 Template:Incode
+  5.82%    2.248      9 Template:MenuCommand
+  5.05%    1.952     26 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61447-0!canonical and timestamp 20260111210934 and revision id 1736372. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61447-0!canonical and timestamp 20260112110137 and revision id 1737401. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
