--- a/wiki/it/FreeCAD_and_DWG_Import.html
+++ b/wiki/it/FreeCAD_and_DWG_Import.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">FreeCAD and DWG Import/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-FreeCAD+and+DWG+Import&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--high" title="FreeCAD und DWG-Import (98% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD und DWG-Import (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../FreeCAD_and_DWG_Import.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FreeCAD and DWG Import (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--med" title="Importaci&oacute;n de FreeCAD y DWG (42% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--high" title="FreeCAD et l'importation DWG (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--high" title="FreeCAD i import DWG (98% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
+<li><a href="../pl/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD i import DWG (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--low" title="FreeCAD e Importa&ccedil;&atilde;o DWG (4% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--low" title="FreeCAD &#1080; &#1080;&#1084;&#1087;&#1086;&#1088;&#1090; DWG (2% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--med" title="FreeCAD &#50640;&#49436; DWG &#48520;&#47084;&#50724;&#44592; (29% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -73,11 +73,8 @@ Per visualizzare queste opzioni, visitare <a rel="nofollow" class="external text
 <ul><li>homepage: <a rel="nofollow" class="external free" href="https://qcad.org/en/qcad-command-line-tools#dwg2dwg">https://qcad.org/en/qcad-command-line-tools#dwg2dwg</a></li>
 <li>licenza: commerciale</li>
 <li>facoltativo, utilizzato per abilitare l'importazione e l'esportazione di file DWG</li></ul>
-<div class="mw-translate-fuzzy">
-<p>QCAD &egrave; una nota piattaforma CAD 2D open source basata sul formato DXF. Offre anche una versione pro a pagamento, che &egrave; sostanzialmente la versione open source con supporto per il formato DWG. Acquistando la versione pro, QCAD include anche un'utilit&agrave; di conversione da DWG a DXF utilizzabile da FreeCAD.
-</p>
-</div>
-<p><span id="Installation"></span>
+<p>QCAD Community Edition &egrave; una nota piattaforma CAD 2D open source basata sul formato DXF. Offre anche una versione pro a pagamento, che &egrave; sostanzialmente la versione open source con supporto per il formato DWG e funzioni di progettazione. Acquistando la versione pro, QCAD include anche un'utilit&agrave; di conversione da DWG a DXF utilizzabile da FreeCAD.
+</p><p><span id="Installation"></span>
 </p>
 <h4><span class="mw-headline" id="Installazione_2">Installazione</span></h4>
 <p>Se l'utilit&agrave; non viene rilevata automaticamente da FreeCAD dopo l'installazione (<span style="font-size:small;"><a href="../it/Release_notes_0.21.html" title="Release notes 0.21/it">disponibile dalla versione 0.21</a></span>), &egrave; necessario impostare manualmente il percorso del file bash (Linux e macOS) o del file batch (Windows). Vedere le <a href="../it/Import_Export_Preferences.html#DWG" title="Import Export Preferences/it">Preferenze di importazione ed esportazione</a>.
@@ -147,34 +144,34 @@ Per visualizzare queste opzioni, visitare <a rel="nofollow" class="external text
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210825
+Cached time: 20260112110423
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.074 seconds
-Real time usage: 0.224 seconds
-Preprocessor visited node count: 364/1000000
+Real time usage: 0.145 seconds
+Preprocessor visited node count: 363/1000000
 Post&#8208;expand include size: 17074/2097152 bytes
 Template argument size: 6499/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3079/5000000 bytes
+Unstrip post&#8208;expand size: 3093/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   84.410      1 -total
- 46.38%   39.152      1 Template:Draft_Tools_navi/it
- 31.32%   26.438      2 Template:Navigation_menu_2
- 17.00%   14.351      1 Template:Userdocnavi/it
- 11.64%    9.829      2 Template:Code
-  7.72%    6.518      5 Template:Version/it
-  6.88%    5.811      1 Template:Fake_heading
-  2.62%    2.210      3 Template:Incode
-  1.88%    1.585      1 Template:TOCright
+100.00%   37.158      1 -total
+ 34.88%   12.962      1 Template:Draft_Tools_navi/it
+ 29.05%   10.794      1 Template:Userdocnavi/it
+ 16.97%    6.306      2 Template:Navigation_menu_2
+ 11.24%    4.178      5 Template:Version/it
+  6.43%    2.390      3 Template:Incode
+  6.16%    2.288      2 Template:Code
+  4.58%    1.702      1 Template:Fake_heading
+  4.42%    1.644      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:46676-0!canonical and timestamp 20260111210825 and revision id 1736349. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:46676-0!canonical and timestamp 20260112110423 and revision id 1737405. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
