--- a/wiki/it/How_to_install_macros.html
+++ b/wiki/it/How_to_install_macros.html
@@ -5,7 +5,7 @@
 <li><a href="../es/How_to_install_macros.html" class="mw-pt-progress mw-pt-progress--low" title="How to install macros/es (0% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/How_to_install_macros.html" class="mw-pt-progress mw-pt-progress--complete" title="Comment installer des macros (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/How_to_install_macros.html" class="mw-pt-progress mw-pt-progress--low" title="How to install macros/hr (1% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/How_to_install_macros.html" class="mw-pt-progress mw-pt-progress--complete" title="Jak zainstalowa&#263; makrodefinicje (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/How_to_install_macros.html" class="mw-pt-progress mw-pt-progress--low" title="Como instalar macros (1% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/How_to_install_macros.html" class="mw-pt-progress mw-pt-progress--low" title="Cum se instaleaz&#259; macrocomenzile (3% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -111,13 +111,11 @@
 <ul><li>Di solito in Linux &egrave; <code>/usr/share/freecad/</code></li>
 <li>Di solito in Windows &egrave; <code>C:\Program Files\FreeCAD\</code></li>
 <li>Di solito in macOS &egrave; <code>/Applications/FreeCAD/</code></li></ul>
-<div class="mw-translate-fuzzy">
 <p>La <code>$ROOT_DIR</code> pu&ograve; essere la directory di un utente particolare.
 </p>
 <ul><li>Su Linux di solito &egrave; <code>/home/username/.local/share/FreeCAD/</code> (<span style="font-size:small;color:green;">0.20 and above</span>) or <code>/home/username/.FreeCAD/</code> (<span style="font-size:small;color:blue;">0.19 and below</span>).</li>
 <li>Su Windows di solito &egrave; <code>C:\Users\username\AppData\FreeCAD\</code></li>
-<li>Su Mac OSX di solito &egrave; <code>/Users/username/Library/Preferences/FreeCAD/</code></li></ul>
-</div>
+<li>Su macOS di solito &egrave; <code>/Users/username/Library/Preferences/FreeCAD/</code></li></ul>
 <p><span id="Configuring_the_user_directory"></span>
 </p>
 <h3><span class="mw-headline" id="Configurazione_della_directory_utente">Configurazione della directory utente</span></h3>
@@ -451,35 +449,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112110728
+Cached time: 20260112110738
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.182 seconds
-Real time usage: 0.249 seconds
-Preprocessor visited node count: 1322/1000000
+CPU time usage: 0.181 seconds
+Real time usage: 0.277 seconds
+Preprocessor visited node count: 1321/1000000
 Post&#8208;expand include size: 40412/2097152 bytes
 Template argument size: 6890/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 7/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6396/5000000 bytes
+Unstrip post&#8208;expand size: 6400/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.006      1 -total
- 39.66%   19.833      1 Template:Powerdocnavi/it
- 30.30%   15.154      1 Template:Navigation_menu_2
-  9.32%    4.659     41 Template:Caption
-  6.42%    3.209      7 Template:Code
-  5.88%    2.940      1 Template:TutorialInfo/it
-  4.52%    2.261     15 Template:MenuCommand
-  4.50%    2.252     33 Template:Incode
-  4.14%    2.071      1 Template:Clear
-  3.90%    1.949     10 Template:Button
+100.00%   43.182      1 -total
+ 13.68%    5.909     41 Template:Caption
+ 11.42%    4.932      1 Template:Powerdocnavi/it
+  9.98%    4.310      7 Template:Code
+  7.59%    3.276      1 Template:TutorialInfo/it
+  6.60%    2.850     33 Template:Incode
+  5.73%    2.473     10 Template:Button
+  5.62%    2.426      2 Template:VersionMinus
+  5.54%    2.392      2 Template:VersionPlus
+  4.67%    2.015     15 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54228-0!canonical and timestamp 20260112110727 and revision id 1737409. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54228-0!canonical and timestamp 20260112110738 and revision id 1737411. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
