--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -105,10 +105,8 @@
 <li>Nyn&iacute; m&#367;&#382;ete nastavit vzd&aacute;lenost mezi st&#345;edy X a Y pro jeden z kruh&#367; na 6 mm. Vzhledem k tomu, &#382;e kruhy jsou vz&aacute;jemn&#283; zavazbeny, druh&yacute; kruh se odpov&iacute;daj&iacute;c&iacute;m zp&#367;sobem uprav&iacute;.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_TopFaceSketch.png&amp;filetimestamp=20240928094349&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_TopFaceSketch.png" decoding="async" width="1028" height="732" class="mw-file-element" data-file-width="1028" data-file-height="732"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Notice how, once again, when you lock the position and dimension of everything in your sketch, it becomes fully constrained. This always keeps you on the safe side. You could change the first sketch now, everything we did afterwards would keep tight.</li>
-<li>Leave edit mode, select this new sketch, and create a <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Pad</a> of 2.7 mm:</li></ul>
-</div>
+<ul><li>V&scaron;imn&#283;te si, jak se op&#283;t po uzam&#269;en&iacute; polohy a rozm&#283;r&#367; v&scaron;ech prvk&#367; ve skice st&aacute;v&aacute; skica pln&#283; zavazben&aacute;. T&iacute;mto zp&#367;sobem budete v&#382;dy na bezpe&#269;n&eacute; stran&#283;. Nyn&iacute; m&#367;&#382;ete zm&#283;nit prvn&iacute; skicu, v&scaron;e, co jsme ud&#283;lali pot&eacute;, z&#367;stane nezm&#283;n&#283;no.</li>
+<li>Opus&#357;te re&#382;im &uacute;prav, vyberte tento nov&yacute; n&aacute;&#269;rt a vytvo&#345;te <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">desku</a> o velikosti 2,7 mm:</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_topCylPad.png&amp;filetimestamp=20240928094918&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_topCylPad.png" decoding="async" width="1150" height="627" class="mw-file-element" data-file-width="1150" data-file-height="627"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -194,13 +192,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112110355
+Cached time: 20260112110915
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.140 seconds
-Real time usage: 0.210 seconds
-Preprocessor visited node count: 85/1000000
+CPU time usage: 0.122 seconds
+Real time usage: 0.219 seconds
+Preprocessor visited node count: 84/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -210,13 +208,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.573      1 -total
- 62.93%    6.024      1 Template:Manual:TOC
- 45.41%    4.347      1 Manual:Summary/cs
- 31.18%    2.985      2 Template:Docnav
+100.00%   14.969      1 -total
+ 77.89%   11.660      1 Template:Manual:TOC
+ 46.36%    6.940      1 Manual:Summary/cs
+ 19.41%    2.905      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112110355 and revision id 1737403. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112110915 and revision id 1737413. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
