--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -109,12 +109,10 @@
 <li>Opus&#357;te re&#382;im &uacute;prav, vyberte tento nov&yacute; n&aacute;&#269;rt a vytvo&#345;te <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">desku</a> o velikosti 2,7 mm:</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_topCylPad.png&amp;filetimestamp=20240928094918&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_topCylPad.png" decoding="async" width="1150" height="627" class="mw-file-element" data-file-width="1150" data-file-height="627"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Since we used the top face of our base block as the foundation for this new sketch, any Part Design operation applied to it will be correctly built on top of the base shape. The two circles are not independent objects; they will be extruded directly from the existing block. This is the key advantage of working in the Part Design Workbench&mdash;as long as you ensure each step is built upon the previous one, you are effectively constructing a single, cohesive solid object.</li>
-<li>We can now duplicate our two dots four times. Select the latest Pad we just created.</li>
-<li>Press the <span typeof="mw:File"><a href="../index.php?title=PartDesign_LinearPattern.svg&amp;filetimestamp=20170324053639&amp;.html" class="mw-file-description"><img src="../File/PartDesign_LinearPattern.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_LinearPattern.html" title="PartDesign LinearPattern">Linear pattern</a> button.</li>
-<li>Give it a length of 36 mm (which is the total "span" we want our copies to fit in), in the "horizontal sketch axis" direction, and make it 4 occurrences:</li></ul>
-</div>
+<ul><li>Jeliko&#382; jsme jako z&aacute;klad pro tento nov&yacute; n&aacute;&#269;rt pou&#382;ili horn&iacute; plochu z&aacute;kladn&iacute;ho bloku, bude jak&aacute;koli operace n&aacute;vrhu sou&#269;&aacute;sti, kter&aacute; na n&#283;j bude aplikov&aacute;na, spr&aacute;vn&#283; vytvo&#345;ena na z&aacute;kladn&iacute;m tvaru. Tyto dva kruhy nejsou samostatn&yacute;mi objekty; budou extrudov&aacute;ny p&#345;&iacute;mo ze st&aacute;vaj&iacute;c&iacute;ho bloku. To je hlavn&iacute; v&yacute;hoda pr&aacute;ce v pracovn&iacute;m prost&#345;ed&iacute; Part Design &ndash; pokud zajist&iacute;te, &#382;e ka&#382;d&yacute; krok navazuje na p&#345;edchoz&iacute;, efektivn&#283; vytv&aacute;&#345;&iacute;te jeden souvisl&yacute; pevn&yacute; objekt.</li>
+<li>Nyn&iacute; m&#367;&#382;eme na&scaron;e dva body &#269;ty&#345;ikr&aacute;t zduplikovat. Vyberte posledn&iacute; podlo&#382;ku, kterou jsme pr&aacute;v&#283; vytvo&#345;ili.</li>
+<li>Stiskn&#283;te tla&#269;&iacute;tko <span typeof="mw:File"><a href="../index.php?title=PartDesign_LinearPattern.svg&amp;filetimestamp=20170324053639&amp;.html" class="mw-file-description"><img src="../File/PartDesign_LinearPattern.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_LinearPattern.html" title="PartDesign LinearPattern">Line&aacute;rn&iacute; pole</a>.</li>
+<li>Nastavte d&eacute;lku 36 mm (co&#382; je celkov&eacute; "rozp&#283;t&iacute;", do kter&eacute;ho se maj&iacute; na&scaron;e kopie vej&iacute;t) ve sm&#283;ru "horizont&aacute;ln&iacute; osy n&aacute;&#269;rtu" a vytvo&#345;te 4 v&yacute;skyty:</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_topPattern.png&amp;filetimestamp=20240928095745&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_topPattern.png" decoding="async" width="1198" height="635" class="mw-file-element" data-file-width="1198" data-file-height="635"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -192,13 +190,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112110915
+Cached time: 20260112113116
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
 CPU time usage: 0.122 seconds
-Real time usage: 0.219 seconds
-Preprocessor visited node count: 84/1000000
+Real time usage: 0.185 seconds
+Preprocessor visited node count: 83/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -208,13 +206,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.969      1 -total
- 77.89%   11.660      1 Template:Manual:TOC
- 46.36%    6.940      1 Manual:Summary/cs
- 19.41%    2.905      2 Template:Docnav
+100.00%   10.295      1 -total
+ 72.13%    7.426      1 Template:Manual:TOC
+ 54.31%    5.591      1 Manual:Summary/cs
+ 23.57%    2.426      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112110915 and revision id 1737413. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112113116 and revision id 1737416. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
