Created page with "* Nyní vyřežeme vnitřek bloku pomocí nástroje [[Image:PartDesign_Pocket.svg|16px]] [[PartDesign_Pocket|Kapsa]], což je verze nástroje [[Part Cut|Part Cut]]. Pro vytvoření kapsy vytvoříme náčrt na spodní straně našeho bloku, který bude použit k odstranění části bloku. * S vybranou spodní plochou stiskněte tlačítko [[Image:PartDesign_NewSketch.svg|16px]] [[PartDesign_NewSketch|Vytvořit náčrt]]. * Nakreslete Image:Sketcher_CreateRectangle.svg..."

--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -115,14 +115,12 @@
 <li>Nastavte d&eacute;lku 36 mm (co&#382; je celkov&eacute; "rozp&#283;t&iacute;", do kter&eacute;ho se maj&iacute; na&scaron;e kopie vej&iacute;t) ve sm&#283;ru "horizont&aacute;ln&iacute; osy n&aacute;&#269;rtu" a vytvo&#345;te 4 v&yacute;skyty:</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_topPattern.png&amp;filetimestamp=20240928095745&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_topPattern.png" decoding="async" width="1198" height="635" class="mw-file-element" data-file-width="1198" data-file-height="635"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>We will now carve the inside of the block, using the <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Pocket</a> tool, which is the PartDesign version of <a href="../Part_Cut.html" title="Part Cut">Part Cut</a>. To make a pocket, we will create a sketch on the bottom face of our block, which will be used to remove a part of the block.</li>
-<li>With the bottom face selected, press the <span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">New Sketch</a> button.</li>
-<li>Draw a <span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Rectangle</a> on the face.</li>
-<li>Apply a <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSymmetric.svg&amp;filetimestamp=20240101173322&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">symmetry constraint</a> by selecting the upper left corner point of the rectangle, then the lower right corner point, and finally the origin point (the dot where the red and green axes intersect).</li>
-<li>By using the <span typeof="mw:File"><a href="../index.php?title=Sketcher_External.svg&amp;filetimestamp=20240101091332&amp;.html" class="mw-file-description"><img src="../File/Sketcher_External.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_External.html" title="Sketcher External">External geometry</a> tool choose the left edge of the bottom face. Notice again that it will be highlighted in red.</li>
-<li>Select the upper endpoint of the left edge of the bottom face, and the upper left corner of the rectangle. Set the horizontal and vertical distances between these points to 1.8 mm by using the <span typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Dimension.html" title="Sketcher Dimension"> automatic dimension</a> constraint.</li></ul>
-</div> 
+<ul><li>Nyn&iacute; vy&#345;e&#382;eme vnit&#345;ek bloku pomoc&iacute; n&aacute;stroje <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Kapsa</a>, co&#382; je verze n&aacute;stroje <a href="../Part_Cut.html" title="Part Cut">Part Cut</a>. Pro vytvo&#345;en&iacute; kapsy vytvo&#345;&iacute;me n&aacute;&#269;rt na spodn&iacute; stran&#283; na&scaron;eho bloku, kter&yacute; bude pou&#382;it k odstran&#283;n&iacute; &#269;&aacute;sti bloku.</li>
+<li>S vybranou spodn&iacute; plochou stiskn&#283;te tla&#269;&iacute;tko <span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a>.</li>
+<li>Nakreslete <span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Obd&eacute;ln&iacute;k</a> na plochu.</li>
+<li>Pou&#382;ijte <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSymmetric.svg&amp;filetimestamp=20240101173322&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">svazbu symetrie</a> v&yacute;b&#283;rem lev&eacute;ho horn&iacute;ho rohu a pot&eacute; prav&eacute;ho doln&iacute;ho rohu a nakonec po&#269;&aacute;te&#269;n&iacute;ho bodu (bod, kde se prot&iacute;naj&iacute; &#269;erven&aacute; a zelen&aacute; osa).</li>
+<li>Pomoc&iacute; n&aacute;stroje <span typeof="mw:File"><a href="../index.php?title=Sketcher_External.svg&amp;filetimestamp=20240101091332&amp;.html" class="mw-file-description"><img src="../File/Sketcher_External.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_External.html" title="Sketcher External">Extern&iacute; geometrie</a> vyberte lev&yacute; okraj spodn&iacute; plochy. Op&#283;t si v&scaron;imn&#283;te, &#382;e bude zv&yacute;razn&#283;n &#269;erven&#283;.</li>
+<li>Vyberte horn&iacute; koncov&yacute; bod lev&eacute;ho okraje spodn&iacute; plochy a lev&yacute; horn&iacute; roh obd&eacute;ln&iacute;ku. Nastavte vodorovnou a svislou vzd&aacute;lenost mezi t&#283;mito body na 1,8 mm pomoc&iacute; omezen <span typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Dimension.html" title="Sketcher Dimension"> automatick&yacute; rozm&#283;r</a>.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_BottomRec.png&amp;filetimestamp=20240928103252&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_BottomRec.png" decoding="async" width="774" height="443" class="mw-file-element" data-file-width="774" data-file-height="443"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -190,13 +188,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112113116
+Cached time: 20260112115251
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.122 seconds
-Real time usage: 0.185 seconds
-Preprocessor visited node count: 83/1000000
+CPU time usage: 0.106 seconds
+Real time usage: 0.159 seconds
+Preprocessor visited node count: 82/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -206,13 +204,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.295      1 -total
- 72.13%    7.426      1 Template:Manual:TOC
- 54.31%    5.591      1 Manual:Summary/cs
- 23.57%    2.426      2 Template:Docnav
+100.00%    9.646      1 -total
+ 73.90%    7.128      1 Template:Manual:TOC
+ 57.69%    5.565      1 Manual:Summary/cs
+ 22.71%    2.191      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112113116 and revision id 1737416. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112115251 and revision id 1737418. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
