Updated page Manual:Modeling for product design/cs

--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -120,7 +120,7 @@
 <li>Nakreslete <span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Obd&eacute;ln&iacute;k</a> na plochu.</li>
 <li>Pou&#382;ijte <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSymmetric.svg&amp;filetimestamp=20240101173322&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">svazbu symetrie</a> v&yacute;b&#283;rem lev&eacute;ho horn&iacute;ho rohu a pot&eacute; prav&eacute;ho doln&iacute;ho rohu a nakonec po&#269;&aacute;te&#269;n&iacute;ho bodu (bod, kde se prot&iacute;naj&iacute; &#269;erven&aacute; a zelen&aacute; osa).</li>
 <li>Pomoc&iacute; n&aacute;stroje <span typeof="mw:File"><a href="../index.php?title=Sketcher_External.svg&amp;filetimestamp=20240101091332&amp;.html" class="mw-file-description"><img src="../File/Sketcher_External.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_External.html" title="Sketcher External">Extern&iacute; geometrie</a> vyberte lev&yacute; okraj spodn&iacute; plochy. Op&#283;t si v&scaron;imn&#283;te, &#382;e bude zv&yacute;razn&#283;n &#269;erven&#283;.</li>
-<li>Vyberte horn&iacute; koncov&yacute; bod lev&eacute;ho okraje spodn&iacute; plochy a lev&yacute; horn&iacute; roh obd&eacute;ln&iacute;ku. Nastavte vodorovnou a svislou vzd&aacute;lenost mezi t&#283;mito body na 1,8 mm pomoc&iacute; omezen <span typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Dimension.html" title="Sketcher Dimension"> automatick&yacute; rozm&#283;r</a>.</li></ul>
+<li>Vyberte horn&iacute; koncov&yacute; bod lev&eacute;ho okraje spodn&iacute; plochy a lev&yacute; horn&iacute; roh obd&eacute;ln&iacute;ku. Nastavte vodorovnou a svislou vzd&aacute;lenost mezi t&#283;mito body na 1,8 mm pomoc&iacute; vazby<span typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Dimension.html" title="Sketcher Dimension"> automatick&yacute; rozm&#283;r</a>.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_BottomRec.png&amp;filetimestamp=20240928103252&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_BottomRec.png" decoding="async" width="774" height="443" class="mw-file-element" data-file-width="774" data-file-height="443"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -188,12 +188,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112115251
+Cached time: 20260112115551
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.106 seconds
-Real time usage: 0.159 seconds
+CPU time usage: 0.114 seconds
+Real time usage: 0.148 seconds
 Preprocessor visited node count: 82/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
@@ -204,13 +204,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.646      1 -total
- 73.90%    7.128      1 Template:Manual:TOC
- 57.69%    5.565      1 Manual:Summary/cs
- 22.71%    2.191      2 Template:Docnav
+100.00%    7.827      1 -total
+ 68.62%    5.371      1 Template:Manual:TOC
+ 52.76%    4.130      1 Manual:Summary/cs
+ 26.19%    2.050      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112115251 and revision id 1737418. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112115551 and revision id 1737420. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
