--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -5,7 +5,7 @@
 <li><a href="../it/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--med" title="Manuale:Modellazione per la progettazione del prodotto (27% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Modelowanie dla projektowania produktu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--low" title="Manual:Modeling for product design (13% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;: &#1052;&#1086;&#1076;&#1077;&#1083;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1080;&#1077; &#1076;&#1083;&#1103; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1080;&#1103; &#1087;&#1088;&#1086;&#1076;&#1091;&#1082;&#1090;&#1072; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--low" title="&#25163;&#20876;&#65306;&#20026;&#20135;&#21697;&#35774;&#35745;&#24314;&#27169; (13% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#35069;&#21697;&#35373;&#35336;&#12398;&#12383;&#12417;&#12398;&#12514;&#12487;&#12522;&#12531;&#12464; (3% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -123,13 +123,11 @@
 <li>Vyberte horn&iacute; koncov&yacute; bod lev&eacute;ho okraje spodn&iacute; plochy a lev&yacute; horn&iacute; roh obd&eacute;ln&iacute;ku. Nastavte vodorovnou a svislou vzd&aacute;lenost mezi t&#283;mito body na 1,8 mm pomoc&iacute; vazby<span typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Dimension.html" title="Sketcher Dimension"> automatick&yacute; rozm&#283;r</a>.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_BottomRec.png&amp;filetimestamp=20240928103252&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_BottomRec.png" decoding="async" width="774" height="443" class="mw-file-element" data-file-width="774" data-file-height="443"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Create a <span typeof="mw:File"><a href="../index.php?title=Sketcher_Circle.svg&amp;filetimestamp=20170323210933&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Circle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateCircle.html" title="Sketcher CreateCircle">circle</a> by clicking on the X-axis (red line) and then clicking at another point away from the X axis. This will automatically constrain the center of the circle to lie on the X axis. Repeat this step to create two more circles with centers on the X axis.</li>
-<li>Select the edges of all three circles, and apply an <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainEqual.svg&amp;filetimestamp=20240101173306&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainEqual.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">equal constraint</a>.</li>
-<li>Set the diameter of one circle to 9.765 mm.</li>
-<li>Set the distance between the center of the left circle and the left edge of the rectangle we created before to 10.2 mm.</li>
-<li>Set the distance between the left and middle circles to 12 mm. Repeat this step to set the same 12mm distance between the middle and right circles</li></ul>
-</div>
+<ul><li>Vytvo&#345;te <span typeof="mw:File"><a href="../index.php?title=Sketcher_Circle.svg&amp;filetimestamp=20170323210933&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Circle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateCircle.html" title="Sketcher CreateCircle">kruh</a> kliknut&iacute;m na osu X (&#269;erven&aacute; &#269;&aacute;ra) a pot&eacute; kliknut&iacute;m na jin&yacute; bod mimo osu X. T&iacute;m se automaticky omez&iacute; st&#345;ed kru&#382;nice tak, aby le&#382;el na ose X. Tento krok opakujte a vytvo&#345;te dal&scaron;&iacute; dv&#283; kru&#382;nice se st&#345;edy na ose X.</li>
+<li>Vyberte hrany v&scaron;ech t&#345;&iacute; kruh&#367; a pou&#382;ijte <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainEqual.svg&amp;filetimestamp=20240101173306&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainEqual.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">vazbu shody</a>.</li>
+<li>Nastavte pr&#367;m&#283;r jednoho kruhu na 9,765 mm.</li>
+<li>Nastavte vzd&aacute;lenost mezi st&#345;edem lev&eacute;ho kruhu a lev&yacute;m okrajem obd&eacute;ln&iacute;ku, kter&yacute; jsme vytvo&#345;ili d&#345;&iacute;ve, na 10,2 mm.</li>
+<li>Nastavte vzd&aacute;lenost mezi lev&yacute;m a st&#345;edn&iacute;m kruhem na 12 mm. Tento krok opakujte, abyste nastavili stejnou vzd&aacute;lenost 12 mm mezi st&#345;edn&iacute;m a prav&yacute;m kruhem.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_BottomOuterCirc.png&amp;filetimestamp=20240928104417&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_BottomOuterCirc.png" decoding="async" width="953" height="625" class="mw-file-element" data-file-width="953" data-file-height="625"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -188,29 +186,29 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112115551
+Cached time: 20260112120135
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.114 seconds
-Real time usage: 0.148 seconds
-Preprocessor visited node count: 82/1000000
+CPU time usage: 0.121 seconds
+Real time usage: 0.176 seconds
+Preprocessor visited node count: 81/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2702/5000000 bytes
+Unstrip post&#8208;expand size: 2703/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.827      1 -total
- 68.62%    5.371      1 Template:Manual:TOC
- 52.76%    4.130      1 Manual:Summary/cs
- 26.19%    2.050      2 Template:Docnav
+100.00%   10.341      1 -total
+ 71.59%    7.403      1 Template:Manual:TOC
+ 56.53%    5.846      1 Manual:Summary/cs
+ 24.25%    2.508      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112115551 and revision id 1737420. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112120135 and revision id 1737422. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
