--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -130,13 +130,11 @@
 <li>Nastavte vzd&aacute;lenost mezi lev&yacute;m a st&#345;edn&iacute;m kruhem na 12 mm. Tento krok opakujte, abyste nastavili stejnou vzd&aacute;lenost 12 mm mezi st&#345;edn&iacute;m a prav&yacute;m kruhem.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_BottomOuterCirc.png&amp;filetimestamp=20240928104417&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_BottomOuterCirc.png" decoding="async" width="953" height="625" class="mw-file-element" data-file-width="953" data-file-height="625"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>We are almost done.</li>
-<li>Create three additional <span typeof="mw:File"><a href="../index.php?title=Sketcher_Circle.svg&amp;filetimestamp=20170323210933&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Circle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateCircle.html" title="Sketcher CreateCircle">circles</a>, ensuring that each new circle is concentric with one of the previously drawn circles. Alternatively, you can place the new circles anywhere in the sketch and use the <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainCoincident.svg&amp;filetimestamp=20240101173005&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">coincident constraint</a> tool to align their centers with the centers of the existing circles.</li>
-<li>By choosing all three circles apply an <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainEqual.svg&amp;filetimestamp=20240101173306&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainEqual.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">equal constraint</a>.</li>
-<li>Set the diameter of one circle to 7.2 mm.</li>
-<li>You can now exit the sketch.</li></ul>
-</div>
+<li>Vytvo&#345;te t&#345;i dal&scaron;&iacute; <span typeof="mw:File"><a href="../index.php?title=Sketcher_Circle.svg&amp;filetimestamp=20170323210933&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Circle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateCircle.html" title="Sketcher CreateCircle">kruhy</a>  ujist&#283;te se, &#382;e ka&#382;d&yacute; nov&yacute; kruh je soust&#345;edn&yacute; s jedn&iacute;m z d&#345;&iacute;ve nakreslen&yacute;ch kruh&#367;. Alternativn&#283; m&#367;&#382;ete nov&eacute; kruhy um&iacute;stit kamkoli do n&aacute;&#269;rtu a pomoc&iacute; n&aacute;stroje pro <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainCoincident.svg&amp;filetimestamp=20240101173005&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">vazby toto&#382;nosti</a> zarovnat jejich st&#345;edy se st&#345;edy existuj&iacute;c&iacute;ch kruh&#367;.</li>
+<li>V&yacute;b&#283;rem v&scaron;ech t&#345;&iacute; kruh&#367; se pou&#382;ije <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainEqual.svg&amp;filetimestamp=20240101173306&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainEqual.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">vazba toto&#382;nosti</a>.</li>
+<li>Nastavte pr&#367;m&#283;r jednoho kruhu na 7,2 mm.</li>
+<li>YNyn&iacute; m&#367;&#382;ete skicu ukon&#269;it.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_bottomSketchCom.png&amp;filetimestamp=20240928105157&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_bottomSketchCom.png" decoding="async" width="985" height="602" class="mw-file-element" data-file-width="985" data-file-height="602"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -186,13 +184,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112120135
+Cached time: 20260112121400
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.121 seconds
-Real time usage: 0.176 seconds
-Preprocessor visited node count: 81/1000000
+CPU time usage: 0.129 seconds
+Real time usage: 0.230 seconds
+Preprocessor visited node count: 80/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -202,13 +200,13 @@ Unstrip post&#8208;expand size: 2703/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.341      1 -total
- 71.59%    7.403      1 Template:Manual:TOC
- 56.53%    5.846      1 Manual:Summary/cs
- 24.25%    2.508      2 Template:Docnav
+100.00%    9.603      1 -total
+ 73.01%    7.011      1 Template:Manual:TOC
+ 48.40%    4.648      1 Manual:Summary/cs
+ 22.51%    2.162      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112120135 and revision id 1737422. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112121400 and revision id 1737426. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
