--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -137,9 +137,7 @@
 <li>YNyn&iacute; m&#367;&#382;ete skicu ukon&#269;it.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_bottomSketchCom.png&amp;filetimestamp=20240928105157&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_bottomSketchCom.png" decoding="async" width="985" height="602" class="mw-file-element" data-file-width="985" data-file-height="602"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Select the completed sketch, and use the <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Pocket</a> tool with a length of 12 mm.</li></ul>
-</div>
+<ul><li>Vyberte dokon&#269;en&yacute; n&aacute;&#269;rt a pou&#382;ijte n&aacute;stroj <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Kapsa</a> s d&eacute;lkou 12 mm.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_BottomPad.png&amp;filetimestamp=20240928105608&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_BottomPad.png" decoding="async" width="953" height="496" class="mw-file-element" data-file-width="953" data-file-height="496"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -184,13 +182,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112121400
+Cached time: 20260112121522
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.129 seconds
-Real time usage: 0.230 seconds
-Preprocessor visited node count: 80/1000000
+CPU time usage: 0.116 seconds
+Real time usage: 0.166 seconds
+Preprocessor visited node count: 79/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -200,13 +198,13 @@ Unstrip post&#8208;expand size: 2703/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.603      1 -total
- 73.01%    7.011      1 Template:Manual:TOC
- 48.40%    4.648      1 Manual:Summary/cs
- 22.51%    2.162      2 Template:Docnav
+100.00%    9.559      1 -total
+ 74.12%    7.085      1 Template:Manual:TOC
+ 59.41%    5.679      1 Manual:Summary/cs
+ 21.54%    2.059      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112121400 and revision id 1737426. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112121522 and revision id 1737430. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
