Updated page Main View Area/it

--- a/wiki/it/Main_View_Area.html
+++ b/wiki/it/Main_View_Area.html
@@ -12,7 +12,7 @@
 </p>
 <h2><span class="mw-headline" id="Introduzione">Introduzione</span></h2>
 <p>L'<a href="../it/Main_view_area.html" class="mw-redirect" title="Main view area/it">area della vista principale</a> &egrave; il widget principale che contiene le finestre secondarie nell'<a href="../it/Interface.html" title="Interface/it">interfaccia</a>. &Egrave; un'istanza di Qt <a rel="nofollow" class="external text" href="https://doc.qt.io/qt-5/qmdiarea.html">QMdiArea</a>.
-</p><p>Normalmente contiene schede per la Pagina iniziale e una <a href="../it/3D_View.html" title="3D View/it">Vista 3D</a> per ogni documento aperto. Pu&ograve; contenere altre schede finestre, ad esempio una per ogni <a href="../it/TechDraw_PageDefault.html" title="TechDraw PageDefault/it">pagina di disegno</a> <a href="../it/TechDraw_Workbench.html" title="TechDraw Workbench/it">TechDraw</a>, per ogni <a href="../it/Spreadsheet.html" title="Spreadsheet/it">foglio di calcolo</a> o per ogni <a href="../it/Std_TextDocument.html" title="Std TextDocument/it">documento di testo</a>.
+</p><p>Normalmente contiene schede per la Pagina iniziale e una <a href="../it/3D_View.html" title="3D View/it">Vista 3D</a> per ogni documento aperto. Pu&ograve; contenere altre schede di finestre, ad esempio una per ogni <a href="../it/TechDraw_PageDefault.html" title="TechDraw PageDefault/it">pagina di disegno</a> <a href="../it/TechDraw_Workbench.html" title="TechDraw Workbench/it">TechDraw</a>, per ogni <a href="../it/Spreadsheet.html" title="Spreadsheet/it">foglio di calcolo</a> o per ogni <a href="../it/Std_TextDocument.html" title="Std TextDocument/it">documento di testo</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_interface_base_divisions.svg&amp;filetimestamp=20200314201207&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_interface_base_divisions.svg" decoding="async" width="1024" height="563" class="mw-file-element" data-file-width="1807" data-file-height="994"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">L'area della vista principale &egrave; contrassegnata dal numero 1 e pu&ograve; contenere varie schede, principalmente la pagina iniziale e la vista 3D.</p>
@@ -45,12 +45,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112121452
+Cached time: 20260112121533
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.043 seconds
-Real time usage: 0.054 seconds
+CPU time usage: 0.042 seconds
+Real time usage: 0.074 seconds
 Preprocessor visited node count: 129/1000000
 Post&#8208;expand include size: 9692/2097152 bytes
 Template argument size: 2749/2097152 bytes
@@ -61,14 +61,14 @@ Unstrip post&#8208;expand size: 1866/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.623      1 -total
- 43.88%    4.223      1 Template:Userdocnavi/it
- 39.25%    3.777      1 Template:Interface_navi/it
- 29.28%    2.818      2 Template:Navigation_menu_2
- 14.51%    1.396      1 Template:Caption
+100.00%   11.401      1 -total
+ 48.16%    5.491      1 Template:Interface_navi/it
+ 36.98%    4.216      1 Template:Userdocnavi/it
+ 23.51%    2.680      2 Template:Navigation_menu_2
+ 12.89%    1.470      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:190749-0!canonical and timestamp 20260112121452 and revision id 1737428. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:190749-0!canonical and timestamp 20260112121533 and revision id 1737432. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
